--- a/Phase1/PythonDataManipulation.ipynb
+++ b/Phase1/PythonDataManipulation.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,11 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dumplings'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "bento[4]"
@@ -118,9 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['edamame', 'seaweed salad', 'dumplings']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "# Play around with these numbers, and start to build some understanding of \n",
@@ -137,12 +159,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Code here to add to your list\n",
     "bento.append('kimchi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['salmon', 'rice', 'edamame', 'seaweed salad', 'dumplings', 'kimchi']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bento"
    ]
   },
   {
@@ -154,19 +196,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'edamame'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code here to test that out\n",
-    "bento.pop()"
+    "bento.pop(-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['salmon', 'rice', 'seaweed salad', 'dumplings']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Now check what your list looks like - is that last item still there?\n",
     "bento"
@@ -181,9 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'd like my bento box to contain: salmon, rice, seaweed salad, and dumplings\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "print(\"I'd like my bento box to contain: \" +\n",
@@ -199,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My bento box will include salmon and rice.\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "print(f\"My bento box will include {bento[0]} and {bento[1]}.\")"
@@ -209,9 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My bento box will include salmon and rice.\n"
+     ]
+    }
+   ],
    "source": [
     "# The above cell is the same as:\n",
     "print(\"My bento box will include {} and {}.\".format(bento[0], bento[1]))"
@@ -244,9 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salmon\n",
+      "Rice\n",
+      "Seaweed Salad\n",
+      "Dumplings\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a for loop to capitalize each ingredient in our bento list\n",
     "\n",
@@ -265,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,9 +381,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['salmon', 'seaweed salad', 'dumplings']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check your work\n",
     "s_bento"
@@ -305,9 +415,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['salmon', 'seaweed salad', 'dumplings']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Change our loop to a list comprehension\n",
     "[ingredient for ingredient in bento if 's' in ingredient]"
@@ -315,9 +436,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Salmon', 'Rice', 'Seaweed Salad', 'Dumplings']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We could do the same with our earlier capitalization, too!\n",
     "[ingredient.title() for ingredient in bento]"
@@ -382,11 +514,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ingredient1': 'rice', 'ingredient2': 'tempura', 'ingredient3': 'miso soup'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Here's an example of zipping two lists together to form a dictionary\n",
     "example_bento_keys = [\"ingredient1\", \"ingredient2\", \"ingredient3\"]\n",
@@ -400,9 +541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['salmon', 'rice', 'seaweed salad', 'dumplings']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Now let's do that! What does our current list look like?\n",
     "bento"
@@ -410,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,9 +584,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{'protein': 'salmon', 'main': 'rice', 'vegetable1': 'seaweed salad', 'vegetable2': 'dumplings'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here to check your work - check type, and print your dictionary\n",
     "print(type(bento_dict))\n",
@@ -451,9 +612,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'rice'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Practice accessing elements in your bento box\n",
     "bento_dict['main']"
@@ -468,9 +640,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seaweed salad\n",
+      "dumplings\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your loop\n",
     "for key, ingredient in bento_dict.items():\n",
@@ -487,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,9 +685,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': 'Seaweed Salad', '2': 'Dumplings'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check your work!\n",
     "veggie_dict"
@@ -525,9 +717,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': 'Seaweed Salad', '2': 'Dumplings'}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Change our loop to a dictionary comprehension\n",
     "{k[-1]: v.title() for k, v in bento_dict.items() if 'vegetable' in k}"
@@ -535,9 +738,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Ingredient 1': 'salmon',\n",
+       " 'Ingredient 2': 'rice',\n",
+       " 'Ingredient 3': 'seaweed salad',\n",
+       " 'Ingredient 4': 'dumplings'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# You can get creative with it too!\n",
     "{f\"Ingredient {x+1}\": list(bento_dict.values())[x] for x in range(len((bento_dict.values())))}"
@@ -560,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,9 +814,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Lindsey': {'protein': 'salmon',\n",
+       "  'main': 'rice',\n",
+       "  'vegetable1': 'seaweed salad',\n",
+       "  'vegetable2': 'dumplings'},\n",
+       " 'James': {'main': 'cheeseburger',\n",
+       "  'cheese': 'pepper jack',\n",
+       "  'side': 'french fries',\n",
+       "  'vegetable1': 'pickles',\n",
+       "  'vegetable2': 'onions',\n",
+       "  'drink': 'milkshake'},\n",
+       " 'Hannah': {'main': 'salad',\n",
+       "  'protein': 'tempura shrimp',\n",
+       "  'vegetable1': 'radishes',\n",
+       "  'vegetable2': 'cucumbers',\n",
+       "  'side': 'tuna roll'}}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check your work\n",
     "group_dict"
@@ -614,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,11 +866,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check your work\n",
     "type(group)"
@@ -643,9 +896,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cheeseburger'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Access one dictionary's main\n",
     "group_dict['James']['main']"
@@ -662,9 +926,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rice\n",
+      "cheeseburger\n",
+      "salad\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here to write a for loop that prints each main\n",
     "for order in group_dict.values():\n",
@@ -673,9 +947,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'protein': 'salmon',\n",
+       " 'main': 'rice',\n",
+       " 'vegetable1': 'seaweed salad',\n",
+       " 'vegetable2': 'dumplings'}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(group_dict.values())[0]"
    ]
@@ -689,11 +977,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\"Lindsey's vegetables\": ['seaweed salad', 'dumplings'],\n",
+       " \"James's vegetables\": ['pickles', 'onions'],\n",
+       " \"Hannah's vegetables\": ['radishes', 'cucumbers']}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# An example of nested comprehensions\n",
     "{f\"{name}'s vegetables\": [\n",
@@ -702,9 +1003,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\"Lindsey's vegetables\": ['seaweed salad', 'dumplings'],\n",
+       " \"James's vegetables\": ['pickles', 'onions'],\n",
+       " \"Hannah's vegetables\": ['radishes', 'cucumbers']}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# But remember ... it's okay to easier to write this out as a for loop\n",
     "# THEN you can condense into a comprehension more easily!\n",
